--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "v-jsoneditor": "^1.4.2",
     "vue": "^2.6.11",
+    "vue-codemirror": "^4.0.6",
     "vue-js-modal": "^2.0.0-rc.6"
   },
   "devDependencies": {
