--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,8 @@ jobs:
     name: viz-${{ github.run_number }}
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: LeanIX Microservice Intelligence
         uses: leanix/github-actions-store-leanix-plugin@1.1.0
         id: LIXMID
